--- a/ReactJs/vidly/src/index.css
+++ b/ReactJs/vidly/src/index.css
@@ -1,4 +1,4 @@
-wbody {
+/* wbody {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,8 +10,16 @@ wbody {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
+} */
 
-.clickable{
+body {
+  margin: 0;
+  padding: 0 0 0 0;
+  font-family: sans-serif;
+} 
+.navbar {
+  margin-bottom: 30px;
+}
+.clickable {
   cursor: pointer;
 }
